--- a/src/css/WellTooltip.css
+++ b/src/css/WellTooltip.css
@@ -1,5 +1,5 @@
 .well-tooltip {
-  position: absolute;
+  position: fixed;
   border: 1px solid #dee2e6;
   background-color: #f8f9fa;
   padding: 10px;
