--- a/src/css/MapperParser.css
+++ b/src/css/MapperParser.css
@@ -1,12 +1,13 @@
 .mapper-tabs {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100vh - var(--navbar-height));
 }
 
 .mapper-tabs .tab-content {
   min-height: 0;
   display: flex;
+  flex-grow: 1;
 }
 
 .mapper-tabs .tab-content .tab-pane {
