--- a/src/css/FormField.css
+++ b/src/css/FormField.css
@@ -34,21 +34,29 @@
   width: 100%;
   grid-column: input;
   min-width: 0;
+  
 }
 
 .form-field .form-control {
   width: 100%;
   height: 32px;
-  text-align: right;
   padding: 0.375rem 0.2rem;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
 
+.form-field input[type="number"] {
+  text-align: right
+}
+
+.form-field input[type="text"] {
+  text-align: left
+}
+
 .form-field .form-select {
   width: 100%;
   height: 32px;
-  text-align: right;
+  text-align: left;
   padding: 0.375rem 2rem 0.375rem 0.75rem;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
@@ -61,32 +69,6 @@
 
 .switch-container .form-check.form-switch {
   padding-left: 2.5em;
-}
-
-.form-field-file {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  width: 100%;
-  gap: 0.5rem;
-}
-
-.form-field-file .form-control {
-  width: 100%;
-  text-align: left;
-  padding: 0.375rem;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  background: white;
-}
-
-.form-field-file input[type="file"]::file-selector-button {
-  margin: -0.375rem 0.75rem -0.375rem -0.375rem;
-  padding: 0.375rem 0.75rem;
-  background-color: #e9ecef;
-  border: 0;
-  border-right: 1px solid #ced4da;
-  cursor: pointer;
 }
 
 .form-field-error {
