--- a/src/css/FormField.css
+++ b/src/css/FormField.css
@@ -34,12 +34,11 @@
   width: 100%;
   grid-column: input;
   min-width: 0;
-  
 }
 
 .form-field .form-control {
   width: 100%;
-  height: 32px;
+  line-height: normal;
   padding: 0.375rem 0.2rem;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
@@ -55,9 +54,9 @@
 
 .form-field .form-select {
   width: 100%;
-  height: 32px;
   text-align: left;
-  padding: 0.375rem 2rem 0.375rem 0.75rem;
+  line-height: normal;
+  padding: 0.375rem 0.2rem;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
@@ -86,15 +85,4 @@
 .form-control[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-  .form-field {
-    gap: 0.5rem;
-  }
-  
-  .form-label {
-    font-size: 0.85rem;
-  }
 }
