--- a/src/css/PlateComponent.css
+++ b/src/css/PlateComponent.css
@@ -66,8 +66,7 @@
 }
 
 .plate-grid-label {
-  width: 100%;
-  height: 100%;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,6 +105,18 @@
 
 .wells-container {
   grid-area: wells;
+
+  min-width: 0;
+  min-height: 0;
+}
+
+.wells-container2 {
+  grid-area: wells;
+  width: 100%;
+
+  min-width: 0;
+  min-height: 0;
+  position: relative;
   display: grid;
   gap: 1px;
 }
