--- a/src/css/PlateReformat.css
+++ b/src/css/PlateReformat.css
@@ -9,11 +9,12 @@
   height: 100%;
   overflow-y: auto;
   scrollbar-gutter: stable;
+  padding-right: 0;
 }
 
 .transfer-list-item {
-  min-width: 0;
-  text-overflow: ellipsis;
+  display: flex;
+  flex: 1;
   overflow: hidden;
-  white-space: nowrap;
+  text-overflow: ellipsis;
 }
